# AutoNoCode

./: .gitattributes  .gitignore  .pylintrc  Dockerfile  Gerar arquivos para serem executados no terminal do vs code.docx  ONTRIBUTING.md  build_log.txt  directory_list.txt  directory_structure.txt  estrutura_diretorios.txt  gpt_powershell.py  mypy.ini  npm_output.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  settings.json  setup_and_test.py  test.py  test_dotenv.py  ~WRL3904.tmp
AUTOMATIZACAO/: Prompt para IA especializada em desenvolvimento de software.docx
AutoNoCode/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TYPING_GUIDE.md  build_log.txt  docker-compose.yml  package-lock.json  package.json  pyrightconfig.json  requirements.txt  server.js  setup.cfg  setup_and_test.py  setup_environment.ps1  setup_environment.py  type_info.json  ~$rar arquivos para serem executados no terminal do vs code.docx
arquivos/: directory_structure.txt
backend/: config.js
backup/: automate_typing.py  common_utils.py  patch_typings.py
env/: .env  docker-compose.yml
env_commit/: pyvenv.cfg
env_old/: .env  docker-compose.yml  pyvenv.cfg
env_pre_commit/: pyvenv.cfg
frontend/: .gitignore  package-lock.json  package.json
gpt/: openai_test.py
scripts/: add_docstrings.py  analyze_types.py  auto_run.py  auto_type_annotate.py  check_project_structure.py  commit-script.bat  fix_errors.py  generate_project_structure.py  instrument_collect.py  maintenance.py  open-chrome.js  simple_server.py  start-server.mjs  start_backend.py  start_frontend.py  start_n8n.py  video_upload.py
server/: server.py  webhook.js
service1/: Dockerfile  package-lock.json  package.json
service2/: app.js  (+2 more)
(+97 files in other folders)
